tests/error/dup_case.gw
// [contains] duplicated cases value
switch(maybe) {
	case 1:
	case 1:
}
